test_fm/_test08.ref
Error: local redeclaration of class 'Main' in '_test08.nj' on line 10
