test_fm/_test08.nj
//
// two class declarations
// global class redeclaration
//

public class Main extends Object {
    public static void main(){}
}

public class Main extends Object {
}
